# docs/swagger.yaml
@@ -174,6 +174,12 @@ paths:
           description: 登出成功
           schema:
             $ref: '#/definitions/handler.LogoutResponse'
+        "401":
+          description: 未授权
+          schema:
+            $ref: '#/definitions/common.FailureResponse'
+      security:
+      - ApiKeyAuth: []
       summary: 登出
       tags:
       - auth
@@ -215,11 +221,27 @@ paths:
           description: 请求参数错误
           schema:
             $ref: '#/definitions/common.FailureResponse'
+        "401":
+          description: 未授权
+          schema:
+            $ref: '#/definitions/common.FailureResponse'
+        "403":
+          description: 权限不足
+          schema:
+            $ref: '#/definitions/common.FailureResponse'
         "500":
           description: 服务器内部错误
           schema:
             $ref: '#/definitions/common.FailureResponse'
+      security:
+      - ApiKeyAuth: []
       summary: 创建文章
       tags:
       - post
+securityDefinitions:
+  ApiKeyAuth:
+    description: JWT token stored in cookie
+    in: cookie
+    name: token
+    type: apiKey
 swagger: "2.0"
